tests/error/modifier_errors/flags_nested.err
Error: Unitary constraint violation (at $FILE:17:12)
   | 
15 |     with dagger:
16 |         with power(2):
17 |             foo(q)
   |             ^^^^^^ This function cannot be called in a dagger context

Guppy compilation failed due to 1 previous error
